service-mesh-lab/envoy/envoy.yaml
static_resources:
  listeners:
    - name: main_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: auth-service:9000
                          cluster: auth_service
                          timeout: 5s
                        authorization_request:
                          headers_to_add:
                            - key: x-original-path
                              value: "%REQ(:path)%"
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-user-id
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: id_generator_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: id_generator
                            timeout: 3s
                            retry_policy:
                              retry_on: "5xx"
                              num_retries: 2
                              per_try_timeout: 2s


  clusters:
    - name: id_generator
      type: STRICT_DNS
      load_assignment:
        cluster_name: id_generator
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: id-generator
                      port_value: 8080

    - name: auth_service
      type: STRICT_DNS
      load_assignment:
        cluster_name: auth_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth-service
                      port_value: 9000
